--- a/index.html
+++ b/index.html
@@ -25,10 +25,29 @@
 <body>
 
 <div class="side-bar">
-  <div>newchat + sidebaridcon</div>
   <div>
-    <div>upgradetoPlus</div>
-    <div>name</div>
+    <div class="card">
+      <div>New chat</div>
+      <div>i</div>
+    </div>
+  </div>
+  <div>
+    <div class="card" style="border-top: solid 1px var(--gray-500);">
+      <div class="inner-card">
+        <div>i</div>
+        <div>Upgrade to Plus</div>
+      </div>
+      <div>new</div>
+    </div>
+    <div class="card">
+      <div class="inner-card">
+        <div>i</div>
+        <div>User</div>
+      </div>
+      <div>
+        menu
+      </div>
+    </div>
   </div>
 </div>
 <main>
@@ -46,7 +65,10 @@
       <textarea type="text" placeholder="Send a message" rows="1"></textarea>
       <div class="send-button">
         <span class="send-icon">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="none" class="h-4 w-4 m-1 md:m-0" stroke-width="2"><path d="M.5 1.163A1 1 0 0 1 1.97.28l12.868 6.837a1 1 0 0 1 0 1.766L1.969 15.72A1 1 0 0 1 .5 14.836V10.33a1 1 0 0 1 .816-.983L8.5 8 1.316 6.653A1 1 0 0 1 .5 5.67V1.163Z" fill="currentColor"></path></svg>
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="none" class="h-4 w-4 m-1 md:m-0"
+               stroke-width="2"><path
+            d="M.5 1.163A1 1 0 0 1 1.97.28l12.868 6.837a1 1 0 0 1 0 1.766L1.969 15.72A1 1 0 0 1 .5 14.836V10.33a1 1 0 0 1 .816-.983L8.5 8 1.316 6.653A1 1 0 0 1 .5 5.67V1.163Z"
+            fill="currentColor"></path></svg>
         </span>
       </div>
     </div>
