--- a/index.html
+++ b/index.html
@@ -51,13 +51,50 @@
   </div>
 </div>
 <main>
-  <div>gpt3.5, gpt-4</div>
-  <div>
-    <div>GhatGPT</div>
-    <div>
-      <div>examples</div>
-      <div>capabilities</div>
-      <div>limitations</div>
+  <div class="toggle">
+    <div class="gpt-option">
+      <span>GPT-3.5</span>
+    </div>
+    <div class="gpt-option">
+      <span>GPT-4</span>
+    </div>
+  </div>
+  <div class="container">
+    <div class="title">ChatGPT</div>
+    <div class="content">
+      <div class="table">
+        <div class="head">
+          <span>icon</span>
+          <span class="subtitle">Examples</span>
+        </div>
+        <div class="desc">
+          <div>"Explain quantum computing in simple terms" -></div>
+          <div>"Got any creative ideas for a 10 year old's birthday?" -></div>
+          <div>"How do I make an HTTP request in Javascript?" -></div>
+        </div>
+      </div>
+      <div class="table">
+        <div class="head">
+          <span>icon</span>
+          <span class="subtitle">Capabilities</span>
+        </div>
+        <div class="desc">
+          <div>Remembers what user said earlier in the conversation</div>
+          <div>Allows user to provide follow-up corrections</div>
+          <div>Trained to decline inappropriate requests</div>
+        </div>
+      </div>
+      <div class="table">
+        <div class="head">
+          <span>icon</span>
+          <span class="subtitle">Limitations</span>
+        </div>
+        <div class="desc">
+          <div>May occasionally generate incorrect information</div>
+          <div>May occasionally produce harmful instructions or biased content</div>
+          <div>Limited knowledge of world and events after 2021</div>
+        </div>
+      </div>
     </div>
   </div>
   <div class="input-box">
