--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
     </div>
   </div>
   <div class="input-box">
-    <div style="position: relative">
-      <textarea type="text" placeholder="Send a message" rows="1"></textarea>
-      <div class="send-button">
+    <div style="position: relative; word-wrap: break-word;">
+      <textarea id="query" type="text" placeholder="Send a message" rows="1"></textarea>
+      <div class="send-button" id="send">
         <span class="send-icon">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="none" class="h-4 w-4 m-1 md:m-0"
                stroke-width="2"><path
@@ -127,6 +127,9 @@
 <script>
   const setting = document.querySelector("#setting");
   const modal = document.querySelector("#modal");
+  const send = document.querySelector("#send");
+  const query = document.querySelector("#query");
+
   setting.addEventListener("click", () => {
     modal.classList.toggle("hidden");
   })
@@ -134,6 +137,16 @@
   function toggleModal(show) {
     modal.classList.toggle("hidden", !show);
   }
+
+  query.addEventListener("input", OnInput, false);
+  function OnInput() {
+    this.style.height = 0;
+    this.style.height = (Number(this.scrollHeight) - 30) + "px";
+  }
+
+  send.addEventListener("click", () => {
+    alert(query.value)
+  })
 </script>
 <script src="js/vendor/modernizr-3.11.2.min.js"></script>
 <script src="js/plugins.js"></script>
